# docker-gcc-cxx-modules

./: .gitignore  Dockerfile  build.sh
.github/workflows/: build.yml
example/: CMakeLists.txt  env.sh  main.cpp
example/all_mods/: CMakeLists.txt
example/cmake/: compile.pl  cxx_modules.cmake  modules.cmake  scan.pl  scan.sh
example/lang/: CMakeLists.txt  greet.cpp  lang.cpp
example/text/: CMakeLists.txt  text.cpp
